2022-12-20  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha04: Messi';git push
	git tag -a 5.1.4-alpha04 -m '';git push --tags

	* Fix mlc_out dimensions, increase flexibility with mlc_nm and flg_mlc_out

	* Successfully test 3D->1D and 1D->3D

	* Revamp determination of horizontal bounds for flg_grd_in_dpt_1D

2022-12-16  Charlie Zender  <zender@uci.edu>

	* Refine defaults for ease-of-use

	* Verify simultaneous hrz + vrt with WOA18 r025 destination grid

	* NCO 5.1.4-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha03: FOMO';git push
	git tag -a 5.1.4-alpha03 -m 'ncremap: rgr rst, nfr mlc_in, dpt_mdp';git push --tags

	* Interpolation appears to work on regridded restarts

	* Add missing value logic to inferral of dpt_mdp, mlc_in

2022-12-15  Charlie Zender  <zender@uci.edu>

	* Revamp cnv->MPAS determination for v2, add maxLevelCell to horizontal exclusion list

	* Construct maxLevelCell from layerThickness if necessary

	* Allow zMid construction from horizontal or vertical MRV inputs

	* Interpolating MPAS-O (depth-MRV) restart files appears to work

2022-12-14  Charlie Zender  <zender@uci.edu>

	* Construct dpt_mdp from depth-MRV layerThickness, bottomDepth

2022-12-13  Charlie Zender  <zender@uci.edu>

	* ncremap add --dpt_nm option

	* Default MPAS-O monthly output interpolates correctly, restarts need to construct zMid

	* Omit all MPAS profiles derived for spatiallly aggregated horizontal regions

2022-12-12  Charlie Zender  <zender@uci.edu>

	* ncclimo add buid enviroment variables on Compy

	* Output 3D depth/height variable

	* Account for memory ordering when consructing mlc_in

	* Die if memory ordering of depth/height field differs between input and output

	* Exclude vertical dimensions from allowed horizontal dimensions

	* Interpolate interface and midpoint depth fields to same 1D output grid

2022-12-11  Charlie Zender  <zender@uci.edu>
